Gap fix

--- a/src/components/TableExchanges/RecordExchanges/components/ProfitCell/ProfitCell.css
+++ b/src/components/TableExchanges/RecordExchanges/components/ProfitCell/ProfitCell.css
@@ -9,8 +9,10 @@
 
 .button-group {
   display: flex;
+}
 
-  gap: 12px;
+.arrow-button-left {
+  margin-left: 12px;
 }
 
 .arrow-button {
